Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-668

WS-Addressing module does not set ReferenceParameters for wsa:To

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.1.0
    • None
    • None

    Description

      wsa:To ReferenceParameters should be set as per the following standard:
      http://www.w3.org/TR/ws-addr-soap/#bindrefp

      At present the code which should do such a thing only adds reference parameters for replyto, etc... not wsa:To

      axiom_node_t* node = NULL;
      axiom_namespace_t* ns = axiom_namespace_create( this->axisEnv, "http://nsuri", "prefix" );
      axiom_element_t* element = axiom_element_create( this->axisEnv, NULL, "EleName", ns, &node ); axiom_element_set_text( element, this->axisEnv, "sometext", node );

      axis2_endpoint_ref_t* endpointRef = axis2_endpoint_ref_create(
      this->axisEnv, this->endpoint.c_str() );
      axis2_endpoint_ref_add_ref_param( endpointRef, this->axisEnv, node ); axis2_options_set_to( options, this->axisEnv, endpointRef );

      Attachments

        1. to_ref.diff
          2 kB
          Jamie Lyon

        Activity

          People

            samisa Don Samisa Abeysinghe
            aeonflame Jamie Lyon
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: