Adding patch to set ReferenceParameters for wsa:To. Applied patch by Jamie Lyon - AXIS2C-668